--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor"]
 	path = vendor
-	url = git://github.com/mozilla/playdoh-lib.git
+	url = https://github.com/mozilla/playdoh-lib.git
